# cppengine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  cppengine.sln  cppengine.vcxproj  files.json  files.py  pyenv.yaml  references.txt
include/: Camera.h  GameManager.h  GameObject.h  GameObject3D.h  Mesh.h  Model.h  Renderer.h  Script.h  Shader.h  Tetrimino.h  Tetris.h  Texture.h  UI.h  Uniform.h  WindowManager.h  globals.h  stb_image.h
include/components/: Component.h  CompositeEntity.h  Emitter.h  Grid.h  HierarchyComponent.h  Lighting.h  RenderComponent.h  ScriptComponent.h  Transform.h  Tween.h
include/controllers/: App.h  Registry.h  ResourceManager.h  ScriptManager.h  WindowManager.h
include/entities/: Camera.h  Entity.h
include/systems/: GridSystem.h  RenderSystem.h  ScriptSystem.h  TweenSystem.h
include/util/: Mesh.h  SceneTraversal.h  Shader.h  TransformUtils.h  Uniform.h  debug.h  globals.h
res/conf/: example.yaml  settings.yaml  tetriminos.yaml
res/scenes/: MainScene.yaml  example.yaml
res/scripts/: Example.lua  Tetrimino.lua  TetrisGrid.lua  TetrisGrid.py  hello.lua  init.lua  init.py  input.lua  input.py  runtime.lua
res/shaders/: Basic.shader  Lighting.shader
src/: Camera.cpp  GameManager.cpp  GameObject.cpp  GameObject3D.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Script.cpp  Shader.cpp  Tetrimino.cpp  Tetris.cpp  Texture.cpp  UI.cpp  WindowManager.cpp  main.cpp
src/components/: Lighting.cpp  RenderComponent.cpp  Transform.cpp
src/controllers/: App.cpp  Registry.cpp  ResourceManager.cpp  ScriptManager.cpp  WindowManager.cpp
src/controllers/python/: app_bindings.cpp  camera_bindings.cpp  enum_bindings.cpp  glm_bindings.cpp  tetris_bindings.cpp
src/entities/: Camera.cpp
src/systems/: RenderSystem.cpp  ScriptSystem.cpp  TweenSystem.cpp  UI.cpp
src/util/: Mesh.cpp  Shader.cpp  TransformUtils.cpp
x64/Debug/: cppengine.exe.recipe
x64/Debug/cppengine.tlog/: cppengine.lastbuildstate
